# cargo-llvm

./: .gitignore  Cargo.toml  README.md
include/llvm/Config/: config.h  llvm-config.h
src/: build.rs  config.rs  entry.rs  error.rs  main.rs  resource.rs
src/commands/: build_entry.rs  mod.rs  version.rs
tools/llvm-config/: LibraryDependencies.inc
utils/mlgo-utils/: lit.site.cfg
