[package]
name = "cargo-llvm"
version = "0.3.2"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>",
           "Alexander Ronald Altman <alexanderaltman@me.com>", "malezjaa <contact@malezjaa.pl>"]
edition = "2018"

description   = "Manage LLVM/Clang builds"
documentation = "https://docs.rs/llvmenv"
repository    = "https://github.com/malezjaa/cargo-llvm"
keywords      = ["env", "llvm", "clang"]
license       = "MIT"
readme        = "README.md"
categories    = []

[dependencies]
bytes = "1.1.0"
dirs = "5.0.1"
fs_extra = "1.2.0"
futures = "0.3.8"
glob = "0.3.0"
indicatif = "0.17.8"
itertools = "0.13.0"
lazy_static = "1.4"
log = "0.4.11"
num_cpus = "1.13.0"
regex = "1.4.2"
reqwest = { version = "0.12.7", features = ["blocking", "stream"] }
semver = "1.0.23"
serde = "1.0.117"
serde_derive = "1.0.117"
shellexpand = "3.1.0"
simplelog = "0.12.2"
structopt = "0.3.21"
tar = "0.4.30"
tempfile= "3.1.0"
thiserror = "1.0.22"
tokio = { version = "1.12.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
url = "2.2.0"
which = { version = "6.0.3", default-features = false }
xz2 = "0.1.6"

[dev-dependencies]
paste = "1.0.3"

[package.metadata.release]
dev-version = false
